--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "axios": "^1.5.1",
-    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
+    "cross-env": "^7.0.3",
+    "material-ui-confirm": "^3.0.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
